--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-buildscript {
+buildscript { 
+    ext.kotlin_version = '1.3.10'
+
    apply from: "config/jetpack.gradle"
    apply from: "config/leon.gradle"
     addRepos(repositories)
