--- a/baselib/build.gradle
+++ b/baselib/build.gradle
@@ -30,6 +30,16 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'com.android.support:appcompat-v7:28.0.0'
     api 'com.android.support.constraint:constraint-layout:1.1.3'
+    api rx.java
+    api rx.kotlin
+    api rx.android
+    api rx.binding
+
+    api retrofit.core
+    api retrofit.gson
+    api retrofit.rxJava
+    api okhttp.log
+
 //    api "org.jetbrains.anko:anko:$anko_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
