--- a/config/leon.gradle
+++ b/config/leon.gradle
@@ -40,18 +40,26 @@ ext {
     ]
 //--------------------------------------------Http Engine-------------------------------------------
     retrofitPackage = 'com.squareup.retrofit2'
-    retrofitVersion = '2.3.0'
+    retrofitVersion = '2.5.0'
     retrofit = [
             core  : buildDepend(retrofitPackage, 'retrofit', retrofitVersion),
             gson  : buildDepend(retrofitPackage, 'converter-gson', retrofitVersion),
             rxJava: buildDepend(retrofitPackage, 'adapter-rxjava2', retrofitVersion)
     ]
 
+    okhttpPackage = 'com.squareup.okhttp3'
+    okhttpVersion = '3.12.0'
+    okhttp = [
+            core  : buildDepend(okhttpPackage, 'okhttp', okhttpVersion),
+            log  : buildDepend(okhttpPackage, 'logging-interceptor', okhttpVersion),
+    ]
+
 //---------------------------------------------Rx --------------------------------------------------
     reactivePackage = 'io.reactivex.rxjava2'
     //rx
     rxAndroidVersion = '2.0.2'
-    rxJavaVersion = '2.2.0'
+    rxJavaVersion = '2.2.3'
+    rxKotlinVersion = '2.3.0'
     rxLifeCycleVersion = '2.2.1'
     rxBindVersion = '2.0.0'
     rxPermissionVersion = '0.9.4'
@@ -59,6 +67,7 @@ ext {
     rx = [
             android     : buildDepend(reactivePackage, 'rxandroid', rxAndroidVersion),
             java        : buildDepend(reactivePackage, 'rxjava', rxJavaVersion),
+            kotlin        : buildDepend(reactivePackage, 'rxkotlin', rxKotlinVersion),
             life        : "com.trello.rxlifecycle2:rxlifecycle:$rxLifeCycleVersion",
             lifeAndroid : "com.trello.rxlifecycle2:rxlifecycle-android:$rxLifeCycleVersion",
             lifeCmp     : "com.trello.rxlifecycle2:rxlifecycle-components:$rxLifeCycleVersion",
